<resources>
    <string name="app_name">Club</string>

    <string name="ingresar">Ingresar</string>


    #Botones:
    <string name="boton_volver">VOLVER</string>
    <string name="boton_aceptar">ACEPTAR</string>
    <string name="boton_ir">IR</string>


    #introActivity:
    <string name="bienvenida">Bienvenido</string>
    #ModificarUsuarioActivity:
    #detalleUsuarioNoSocioActivity:
    #crearUsuarioActivity:
    <string name="llave_nombre">Nombre</string>
    <string name="valor_nombre">Javier Rodriguez</string>
    <string name="sin_valor_nombre">nombre y Apellido</string>
    <string name="llave_apellido">Apellido</string>
    <string name="valor_apellido">Javier Rodriguez</string>
    <string name="sin_valor_apellido">Apellido</string>
    <string name="llave_socio">Socio</string>
    <string name="valor_socio">Activo</string>
    <string name="llave_fechaNac">Fecha de Nacimiento</string>
    <string name="valor_fechaNac">01/01/1990</string>
    <string name="llave_domicilio">Domicilio</string>
    <string name="valor_domicilio">Av.Córdoba 4253, CABA</string>
    <string name="sin_valor_domicilio">Domicilio</string>
    <string name="llave_telefono">Teléfono</string>
    <string name="valor_telefono">+54 1123456789</string>
    <string name="sin_valor_telefono">+## #### ####</string>
    <string name="llave_cuota">Cuota</string>
    <string name="valor_cuota">$5020</string>

    <string name="sin_valor_dni">DNI</string>

    #menuPrincipalActivity:
    <string name="option_menu_principalUsuarios">Usuarios</string>
    <string name="option_menu_principalActividades">Actividades</string>
    <string name="option_menu_principalCuotas">Cuotas</string>
    <string name="btn_salir">Salir</string>

    #detalleUsuarioNoSocioActivity:
    <string name="texto_menu_on_top_no_socio">No Socio</string>
    <string name="nombre_no_socio">Carlos Gimenez</string>
    <string name="btn_nueva_actividad">Nueva Actividad</string>
    <string name="llave_apto_fisico">Apto físico</string>
    <string name="valor_apto_fisico">10/10/2023</string>
    <string name="btn_modificar_usuario">Modificar usuario</string>


    #InicioSesionActivity:
    <string name="inicio_sesion">Inicio de sesión</string>
    <string name="complete_datos">Complete sus datos para ingresar</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">***********</string>
    <string name="contrasenaHelp">Contraseña</string>
    <string name="olvidaste_contrasena">¿Olvidaste tu contraseña?</string>

    #PagoTarjetaActivity:
    <string name="pago_tarjeta">Pasar tarjeta por el posnet y continuar con el pago por ese medio.</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="label_pago_con_tarjeta">Pago con tarjeta</string>

    #DetalleUsuarioActivity:
    <string name="texto_menu_on_top_socio">Socio</string>
    <string name="nombre_socio">Javier Rodriguez</string>
    <string name="btn_ver_carnet">VER CARNET</string>
    <string name="btn_ver_cuotas">VER CUOTAS</string>
    <string name="subir_apto_fisico">Subir apto físico</string>

    #ElegirActividadNoSocio:
    <string name="label_nueva_actividad">Nueva actividad</string>
    <string name="actividad1">Karate</string>
    <string name="actividad2">Natación</string>
    <string name="actividad3">Fútbol</string>
    <string name="actividad4">Danza</string>
    <string name="actividad5">Yoga</string>
    <string name="agregar">+</string>

    <string name="llave_importe_final">Importe Final</string>
    <string name="valor_importe_final">$ 9950,00</string>
    <string name="llave_tarjeta">Tarjeta Débito /Crédito</string>
    <string name="valor_flecha"><![CDATA[>]]></string>
    <string name="llave_billetera_v">Billetera Virtual</string>
    <string name="llave_efectivo">Efectivo</string>
    <string name="llave_num_soc">Socio N°:</string>
    <string name="valor_num_soc">1022</string>
    <string name="llave_fechaVen">Vencimiento:</string>
    <string name="valor_fechaVen">12/10/2024</string>
    <string name="valor_dni">48.912.843</string>
    <string name="llave_dni">D.N.I.:</string>
    <string name="boton_imprimir">IMPRIMIR</string>


    #ArrayPagoEfectivo
    <string-array name="cuotas_array">
        <item> 1 cuota </item>
        <item> 2 cuotas </item>
        <item> 3 cuotas </item>
        <item> 4 cuotas </item>
        <item> 5 cuotas </item>
    </string-array>


    <string name="edit">Editar</string>
    <string name="add">Agregar</string>

    #listaDeCuotas:
    <string name="pagas">pagas</string>
    <string name="impagas">impagas</string>
    <string name="pagada">PAGA</string>
    <string name="impaga">IMPAGA</string>
    <string name="vencenHoy">vencen hoy</string>
    <string name="pagar">PAGAR</string>
    <string name="ver">VER</string>

    #PopUpDetalleActividad:
    <string name="karate">Karate</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
</resources>