<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarUsuarioSocioActivity"
    tools:ignore="MissingConstraints">

 <!--   <ScrollView
        android:layout_width="411dp"
        android:layout_height="731dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:minWidth="200dp"
            android:minHeight="200dp"
            android:src="@mipmap/icono_persona" />


    </ScrollView>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/boton_chico"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />  -->

    <ScrollView
        android:layout_width="411dp"
        android:layout_height="731dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:minWidth="200dp"
            android:minHeight="200dp"
            android:src="@mipmap/icono_persona" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"

            android:orientation="horizontal">


            <TextView
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:tag=""
                android:text="@string/llave_nombre"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:tag=""
                android:text="@string/valor_nombre"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/yellow"
            android:orientation="horizontal">

            <TextView
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:tag=""
                android:text="@string/llave_socio"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:tag=""
                android:text="@string/valor_socio"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/yellow"
            android:orientation="horizontal">

            <TextView
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:tag=""
                android:text="@string/llave_fechaNac"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:tag=""
                android:text="Fecha"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/yellow"
            android:orientation="horizontal">

            <TextView
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:tag=""
                android:text="@string/llave_domicilio"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:tag=""
                android:text="@string/valor_domicilio"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/yellow"
            android:orientation="horizontal">

            <TextView
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:tag=""
                android:text="@string/llave_telefono"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:tag=""
                android:text="@string/valor_telefono"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/yellow"
            android:orientation="horizontal">

            <TextView
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:tag=""
                android:text="@string/llave_cuota"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:tag=""
                android:text="@string/valor_cuota"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>


        </LinearLayout>


        <Button
            android:id="@+id/button2"
            android:layout_width="192dp"
            android:layout_height="47dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/boton_chico"
            android:text="@string/boton_aceptar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>