<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modificar_usuario_nosocio_Activity">
    <ScrollView
        android:layout_width="411dp"
        android:layout_height="731dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:minWidth="10dp"
                android:minHeight="10dp"
                android:src="@mipmap/fotousuario" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_background"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_gravity="center_vertical"
                    android:tag=""
                    android:text="@string/llave_nombre"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:tag=""
                    android:text="@string/valor_nombre"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_background"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:layout_gravity="center_vertical"
                    android:tag=""
                    android:text="@string/llave_fechaNac"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />
                <ImageView
                    android:id="@+id/imageCalendar"
                    android:layout_width="24dp"
                    android:layout_marginStart="45dp"
                    android:layout_height="27dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/icon_calendar" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="20dp"
                    android:text="@string/valor_fechaNac"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                     />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_background"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_gravity="center_vertical"
                    android:tag=""
                    android:text="@string/llave_domicilio"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:tag=""
                    android:text="@string/valor_domicilio"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_background"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:layout_gravity="center_vertical"
                    android:tag=""
                    android:text="@string/llave_telefono"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:tag=""
                    android:text="@string/valor_telefono"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="192dp"
                android:layout_height="47dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/boton_chico"
                android:text="@string/boton_aceptar"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>