<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/inicioSesion"
                android:layout_width="291dp"
                android:layout_height="171dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@mipmap/inicio_sesion" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="40dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_sesion"
                        android:textColor="@color/dark_grey"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/complete_datos"
                        android:textColor="@color/dark_grey"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginBottom="40dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/usuario"
                        android:textColor="@color/dark_grey"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/editTextUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/input_background"
                        android:ems="10"
                        android:inputType="text"
                        android:text="@string/usuario"
                        android:textColor="@color/light_grey"
                        android:textSize="14sp"
                        android:paddingStart="10dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="298dp">

                    <TextView
                        android:id="@+id/textViewContrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contrasena"
                        android:textColor="@color/dark_grey"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/editTextContrasena"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/input_background"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:text="@string/contrasena"
                        android:textColor="@color/light_grey"
                        android:paddingStart="10dp"
                        />

                    <TextView
                        android:id="@+id/textViewOlvidasteContrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/olvidaste_contrasena"
                        android:textAlignment="textEnd"
                        android:textColor="@color/dark_grey" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/botonIngresar"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:background="@drawable/boton_chico"
                android:text="@string/ingresar"
                android:layout_marginBottom="20dp"
                />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/barra_divisora"
                android:layout_marginBottom="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/logo_google" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/logo_facebook" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>